--- a/shipments/ShipmentsAPI/ShipmentsAPI.csproj
+++ b/shipments/ShipmentsAPI/ShipmentsAPI.csproj
@@ -116,7 +116,10 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Startup\WebApiConfig.cs" />
+    <Compile Include="Controllers\ShipmentsController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
