added appsettings for auth0

--- a/shipments/ShipmentsAPI/Web.config
+++ b/shipments/ShipmentsAPI/Web.config
@@ -4,7 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  
+  <appSettings>
+    <add key="auth0:ClientId" value="nivVa9bBYd9tdyInVpIMHad0KWqW2hJs"/>
+    <add key="auth0:ClientSecret" value="7AUqovDnpu6Ab-XUg-jnwm__dBT_dS-GLJWMlaTbq8Dk-f05EYr6cWd8zUXg5-W9"/>
+    <add key="auth0:Domain" value="swarg.auth0.com"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
