--- a/shipments/ShipmentsAPI/ShipmentsAPI.csproj
+++ b/shipments/ShipmentsAPI/ShipmentsAPI.csproj
@@ -116,6 +116,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Startup\AuthZeroConfig.cs" />
     <Compile Include="App_Startup\WebApiConfig.cs" />
     <Compile Include="Controllers\ShipmentsController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
