--- a/shipments/ShipmentsAPI/Web.config
+++ b/shipments/ShipmentsAPI/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <appSettings>
-    <add key="auth0:ClientId" value="nivVa9bBYd9tdyInVpIMHad0KWqW2hJs"/>
-    <add key="auth0:ClientSecret" value="7AUqovDnpu6Ab-XUg-jnwm__dBT_dS-GLJWMlaTbq8Dk-f05EYr6cWd8zUXg5-W9"/>
-    <add key="auth0:Domain" value="swarg.auth0.com"/>
+    <add key="auth0:ClientId" value="nivVa9bBYd9tdyInVpIMHad0KWqW2hJs" />
+    <add key="auth0:ClientSecret" value="7AUqovDnpu6Ab-XUg-jnwm__dBT_dS-GLJWMlaTbq8Dk-f05EYr6cWd8zUXg5-W9" />
+    <add key="auth0:Domain" value="swarg.auth0.com" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -26,6 +26,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.20622.1351" newVersion="4.0.20622.1351" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
