--- a/shipments/ShipmentsAPI/ShipmentsAPI.csproj
+++ b/shipments/ShipmentsAPI/ShipmentsAPI.csproj
@@ -117,8 +117,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Startup\AuthZeroConfig.cs" />
-    <Compile Include="App_Startup\WebApiConfig.cs" />
+    <Compile Include="App_Start\AuthZeroConfig.cs" />
+    <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ShipmentsController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
